fix: 修复多篇文章中的 AI 事实性错误（联网核实）
- Java8: ifPresentOrElse 标注为 Java 9 新增（Java 8 不可用）
- Java17: record 误用 instanceof 改为 implements；--illegal-access 已失效改用 --add-opens
- Java21: 修复无法编译的未命名变量示例、StructuredTaskScope.result()、分代ZGC默认值说明、Java25 结构化并发仍为预览
- Nginx: 删除已被内核移除的 tcp_tw_recycle；listen http2 改为 http2 on
- K3s: K3S_VERSION 改为 INSTALL_K3S_VERSION
- Caddy: rate_limit 标注需第三方插件；basicauth 改为 basic_auth
- ES: minimum_master_nodes 已在 ES7 移除，改为 voting configuration
- macOS: ps --sort/du --exclude 为 GNU 专有改 BSD 写法；killall -i/-I 含义；cp -v 说明
- firewalld: 后端版本对应 RHEL8+ nftables
- DM8: 删除不存在的 CREATE DATABASE CHARSET 改 dminit；Hibernate 方言类名；TIME 类型矛盾
- MySQL: 不存在的 pt-schema-review 改为 pt-duplicate-key-checker
- SVN: 虚构的 add --no-commit；svn:global-ignore 改 global-ignores；resolve 注释